--- a/html/css/style.css
+++ b/html/css/style.css
@@ -128,22 +128,17 @@ background-size: cover;
     font-weight: normal;
     color: black;
     font-size: 14pt;
-    margin-left: 23pt;
-    margin-bottom: 0;
 }
-#user-info {
-    margin-top: 23pt;
-}
+
 .back {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("/img/greenwp2.jpg");
     background-size: 100% 100%; /* Ensures the background image maintains its natural size */
     overflow: auto;
     overflow-y: scroll;
-    align-items: center;
 }
 
 
@@ -232,10 +227,21 @@ background-size: cover;
 }
 .usercont {
     margin: 15pt;
-    flex-direction: column;
     background-color: #f9f9f9;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border: 1px solid #ddd;
     height: 300px;
-    width: 35%;
+    overflow: auto;
+    padding: 23pt;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    color: black;
+    font-size: 14pt;
 }
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: black;
+    font-size: 20pt;
+}
+
