--- a/html/css/style.css
+++ b/html/css/style.css
@@ -86,10 +86,20 @@ width: 100%;
 height: 100%;
 display: flex;
 flex-direction: column;
+align-items: center;
 text-align: center;
 background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("/img/greenwp.jpg");
 background-repeat: no-repeat;
 background-size: cover;
+}
+.entmen {
+    margin: 15pt;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ddd;
+    width: 300px;
+    height: 300px;
+    border-radius: 8px;
 }
 .ent h1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -237,6 +247,7 @@ background-size: cover;
     font-weight: normal;
     color: black;
     font-size: 14pt;
+    border-radius: 8px;
 }
 h3 {
     font-family: Arial, Helvetica, sans-serif;
